<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white"
              android:gravity="center"
              android:orientation="vertical">


    <include
        android:id="@+id/activity_menubar_toolbar"
        layout="@layout/tool_bar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/margin_20dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_30dp"
                android:padding="@dimen/padding_10"
                android:src="@drawable/ic_launcher"/>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/activity_login_tilEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/activity_login_etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"/>
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/activity_login_tilPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_top_10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/activity_login_etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"/>
            </android.support.design.widget.TextInputLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_bottom_10dp"

                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/activity_login_tvSignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/margin_left_5dp"
                    android:text="@string/sign_up"
                    android:textColor="@color/colorPrimary"/>


                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/activity_login_tvForgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/margin_left_5dp"
                    android:layout_marginRight="@dimen/margin_right_5dp"
                    android:text="@string/forgot_password_que"
                    android:textColor="@color/colorPrimary"/>
            </RelativeLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/activity_login_btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/drawable_button"
                android:padding="@dimen/padding_10"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="@dimen/font_16sp"/>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/activity_login_tvFblogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:padding="@dimen/padding_5"
                    android:text="@string/facebook_login"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/font_16sp"/>

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/activity_login_tvTwitterlogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:padding="@dimen/padding_5"
                    android:text="@string/twitter_login"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/font_16sp"
                    android:visibility="visible"/>


            </RelativeLayout>


            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/activity_login_tvgooglelogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="@dimen/margin_top_5dp"
                android:padding="@dimen/padding_10"
                android:text="Login with google"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/font_16sp"/>


        </LinearLayout>
    </ScrollView>


</LinearLayout>